# joytracer

./: .gitignore  CMakeLists.txt  README.MD  makefile
docs/: rendering-pipelines.md  vectorization.md
scenes/: test_scene.xml
src/: hammersley.h  joymath.h  joytracer.cpp  joytracer.h  sdl_main.cpp  sdl_wrapper.cpp  sdl_wrapper.h  serialization.cpp  serialization.h
